<resources>
    <string name="app_name">CryptoChat</string>
    <string name="api_default_error">Có lỗi xảy ra</string>
    <string name="str_authe">Tài khoản không hợp lệ/Nhập sai mật khẩu</string>
    <string name="text_all_has_error_please_try">Có lỗi xảy ra, vui lòng thử lại!</string>
    <string name="text_all_has_error_timeout">Kết nối thất bại!</string>
    <string name="text_all_has_error_network">Lỗi kết nối mạng!</string>

    <string name="str_login">Đăng nhập</string>
    <string name="str_password">Mật khẩu</string>
    <string name="str_forgot">Quên mật khẩu?</string>
    <string name="str_or_social">Hoặc đăng nhập bang mạng xã hội</string>
    <string name="str_has_account"><![CDATA[Bạn chưa có tài khoản. <font color=#57BE89>Đăng kí</font>]]></string>

    <string name="facebook_app_id">519908348699671</string>
    <string name="fb_login_protocol_scheme">fb519908348699671</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_email">Email</string>
    <string name="server_client_id">784144847988-mr6067n9hph3k36rvnuikk3ukikrphrp.apps.googleusercontent.com</string>
    <string name="str_loading">Loading...</string>
    <string name="str_error_cancelled">Có lỗi xảy ra, xin vui lòng thử lại!</string>
    <string name="str_login_auth_error">Đăng nhập thất bại, xin thử lại!</string>
    <string name="str_error_on_get_data">Có lỗi xảy ra, vui lòng thử lại sau!</string>
    <string name="str_username">Tài khoản</string>
    <string name="str_missing_input">Mời nhập đủ thông tin!</string>
    <string name="str_register">Đăng ký</string>
    <string name="str_verify_password">Nhập lại mật khẩu</string>
    <string name="str_finish">Hoàn tất</string>
    <string name="str_false_verification">Xác thực mật khẩu không khớp!</string>
    <string name="str_create_auth_error">Đăng ký thất bại, vui long thử lại</string>
    <string name="str_success">Thành công!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_search">Search</string>
    <string name="str_tap_to_select">Nhấn để chọn</string>
    <string name="str_update_password">Cập nhật mật khẩu</string>
    <string name="str_me">Me</string>
    <string name="str_log_out">Đăng xuất</string>
    <string name="str_old_password">Mật khẩu cũ</string>
    <string name="str_new_password">Mật khẩu mới</string>
    <string name="str_change_password">Đổi mật khẩu</string>
    <string name="str_wrong_password">Mật khẩu cũ không đúng!</string>
    <string name="str_change_password_success">Đổi mật khẩu thành công!</string>
    <string name="str_account_unavailable">Tài khoản bị vô hiệu hoá!</string>
    <string name="str_create_room">Tạo phòng</string>
    <string name="str_error">Có lỗi xảy ra, xin thử lại!</string>
    <string name="str_group_name">Tên phòng chat</string>
    <string name="str_failed">Thao tác thất bại, mời thử lại!</string>
    <string name="str_group_chat">Nhóm của %s</string>
    <string name="str_user">Người dùng</string>
    <string name="str_group">Nhóm chat</string>
    <string name="str_insert_message">Nhập tin nhắn...</string>
    <string name="str_save">Lưu thay đổi</string>
    <string name="str_leave">Rời nhóm</string>
</resources>
