<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:padding="@dimen/dp19"
        tools:context=".ui.login.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp150"
                    android:layout_marginTop="@dimen/dp32"
                    android:layout_height="@dimen/dp150"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_logo_splash" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp8"
                    app:layout_constraintBottom_toTopOf="@+id/edt_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/dp24"
                    app:layout_constraintHorizontal_bias="0.421"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_username"
                        style="@style/EditText"
                        android:drawableStart="@drawable/ic_user"
                        android:hint="@string/str_username" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp15"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintBottom_toTopOf="@+id/tv_forgot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        style="@style/EditText"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/str_password"
                        android:inputType="textPassword"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/tv_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dp10"
                    android:paddingTop="@dimen/dp8"
                    android:paddingBottom="@dimen/dp8"
                    android:layout_gravity="end"
                    android:text="@string/str_forgot"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp13"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Button"
                    android:text="@string/str_login"
                    android:layout_marginTop="@dimen/dp8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_forgot" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp36"
                    android:text="@string/str_has_account"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>