<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".ui.register.RegisterActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar_no_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fitsSystemWindows="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp150"
                    android:layout_height="@dimen/dp150"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp44"
                    android:src="@drawable/ic_logo_splash" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp44"
                    android:layout_marginEnd="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp8"
                    app:layout_constraintBottom_toTopOf="@+id/edt_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.421"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_username"
                        style="@style/EditText"
                        android:drawableStart="@drawable/ic_user"
                        android:hint="@string/str_username" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp15"
                    app:layout_constraintBottom_toTopOf="@+id/tv_forgot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        style="@style/EditText"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/str_password"
                        android:inputType="textPassword"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp15"
                    app:layout_constraintBottom_toTopOf="@+id/tv_forgot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_verify_password"
                        style="@style/EditText"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/str_verify_password"
                        android:inputType="textPassword"
                        tools:ignore="Autofill" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_finish"
                    style="@style/Button"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp8"
                    android:layout_marginEnd="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp20"
                    android:text="@string/str_finish"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_forgot" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>